--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: env3
+name: env
 channels:
 - defaults
 dependencies:
@@ -8,10 +8,7 @@ dependencies:
 - vs2015_runtime=14.0.25123=0
 - wheel=0.29.0=py35_0
 - pip:
-  - comtypes==1.1.3
-  - future==0.16.0
   - pyinstaller==3.2.1
   - pypiwin32==219
-  - xlwings==0.10.3
 prefix: D:\Temp\pyexe\env
 
